# our-space

./: .gitignore  .impeccable.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
_raw/: bevyengine_bevy_ A refreshingly simple data-driven game engine built in Rust.md  fbuil-10-1447377.md  mgurbuz-tr_mapgpu_ WebGPU Based GIS Library.md  surveillance-and-diversity.md
crates/app-interactive/: Cargo.toml
crates/app-interactive/src/: agents.rs  basemap.rs  coverage.rs  geocode.rs  loading.rs  main.rs  movable.rs  operators.rs  storymap.rs  theme.rs  ui.rs  world.rs
crates/batch/: Cargo.toml
crates/batch/src/: main.rs
crates/data-pipeline/: Cargo.toml
crates/data-pipeline/src/: ace.rs  alpr.rs  amnesty.rs  borough.rs  boundary.rs  bus_day.rs  cameras_dahir.rs  dashcam.rs  dot.rs  enforcement.rs  equity.rs  extent.rs  facilities.rs  footprints.rs  graph_osm.rs  graph_synth.rs  landmarks.rs  linknyc.rs  main.rs  neighborhoods.rs  parks.rs  plazas.rs  robotability.rs  taxi_day.rs  tesla.rs  vehicle_routes.rs
crates/sim-core/: Cargo.toml
crates/sim-core/examples/: route_demo.rs  taxi_peak.rs
crates/sim-core/src/: assets.rs  ecs.rs  exposure.rs  geometry.rs  graph.rs  lib.rs  math.rs  mobile.rs  projection.rs  rng.rs  scenario.rs  simulation.rs
docs/: 3D_MODE.md  ARCHITECTURE.md  CAMERA_DEDUP.md  CITYWIDE_TRIPS.md  DESIGN.md  PLAN.md  SCALING.md  TAXI_GENERATION.md  TODO.md  TRIP_MODEL.md
tools/: bake_citywide.sh  build_reading.py  extract_landmarks.py  fetch_enforcement.py  generate_bridges.py  generate_icons.py
tools/inspect/: README.md  fps.mjs  inspect.mjs  package.json
web/: build.sh  index.html
web/content/reading/: 01-privacy-of-groups.md  02-police-deployment-dashcams.md  03-nexar-dashcam-breach.md  04-smart-glasses-recording-indicator.md  05-rayban-glasses-harassment.md  README.md
