[package]
name = "app-interactive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Interactive single-route our-space app (native window for dev; WebGPU WASM for the public build)."

[dependencies]
sim-core = { workspace = true }
bevy_egui = { workspace = true }
bevy_prototype_lyon = { workspace = true }
rstar = { workspace = true }
earcutr = { workspace = true }
serde = { workspace = true }
serde_json = "1"
postcard = { workspace = true }
anyhow = { workspace = true }
# Cross-platform non-blocking HTTP (native threads / browser fetch) for the NYC
# GeoSearch address geocoder — works on both the native dev build and the WASM build.
ehttp = "0.5"

# Base Bevy feature set, shared by native + web. Declared in [dependencies] (not
# only in target tables) so Bevy's derive macros resolve crate paths correctly.
# Cargo unions these with the per-target features below.
[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "std",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_color",
    "bevy_asset",
    "bevy_log",
    "async_executor",
    # World-space column headers (Operators view) use Text2d. Pin these explicitly
    # rather than relying on bevy_prototype_lyon transitively pulling the bevy
    # umbrella's defaults — a future dep bump could otherwise drop them.
    "bevy_text",
    "default_font",
]

# Native extras (desktop windowing + parallelism). x11/wayland are Linux-only and
# harmless elsewhere; the native backend (Metal/Vulkan/DX) is auto-selected.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18", features = ["x11", "wayland", "multi_threaded"] }

# Web: WebGPU backend + wasm glue.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18", features = ["webgpu", "web"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# Read `?story=…` for deep-linkable StoryMaps.
web-sys = { version = "0.3", features = ["Window", "Location"] }
