[package]
name = "batch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native headless batch: citywide exposure heatmap (coverage aggregation) and O-D sampling."

[dependencies]
sim-core = { workspace = true }
rstar = { workspace = true }
anyhow = { workspace = true }
